2009-11-09 Jim Garlick <garlick@llnl.gov>

	* man/scrub.1.in : Update NAP reference.

2009-10-20 Jim Garlick <garlick@llnl.gov>

	* src/util.c, src/sig.c, src/fillfile.c : Handle write(2) returning
	zero as an error instead of retrying, as this may indicate a write
	past the end of device.

2009-09-17 Jim Garlick <garlick@llnl.gov>

	* src/scrub.c, src/util.c, src/util.h, man/scrub.1.in : Add -L
	option to modfiy symlink handling [Timothy Boronczyk]
	
2009-07-29 Jim Garlick <garlick@llnl.gov>

	* : tag 2.2

2009-07-24 Jim Garlick <garlick@llnl.gov>

	* src/scrub.c : In scrub_file(), just warn, don't abort on zero length
	file or -r (remove) option will not be honored [Timothy Boronczyk]

2009-03-03 Jim Garlick <garlick@llnl.gov>

	* : tag 2.2pre1

2009-02-21 Jim Garlick <garlick@llnl.gov>

	* src/getsize.c : Define u64 for slackware [Timothy Boronczyk]

2008-12-23 Jim Garlick <garlick@llnl.gov>

	* man/* : Moved man page here from src directory.

	* src/pattern.c : Added 'random' pattern (one pass).

2008-12-21 Jim Garlick <garlick@llnl.gov>

	* config/x_ac_expand_install_dirs.m4 : New, from munge.

	* config/x_ac_meta.m4 : New, from munge, supercedes ac_meta.m4.

	* src/scrub.1.in : Rename from scrub.1.in, fix formatting.

	* autogen.sh : Rename from bootstrap.sh.

2008-11-14 Jim Garlick <garlick@llnl.gov>

	* : tag scrub-2.1

	* src/sig.c : Fix a bug where uninitialized malloc buffer
	was written to first block of file/device when writing signature.
	That buffer could contain some data from the original file.
	This bug was introduced with scrub 1.8 on 2006-08-16.

	* tests/t14 : Test for above regression.

	* tests/pat.c : Utility program for above test.

2008-06-03 Jim Garlick <garlick@llnl.gov>

	* htdocs/index.html : Add SF logo per policy.

2008-05-30 Jim Garlick <garlick@llnl.gov>

	* : tag scrub-2.0

	* src/scrub.c : Drop warning about zero length resource fork to
	address failing tests on darwin.
