@@ -1,4 +1,4 @@
-scrub: using NNSA NAP-14.x patterns
+scrub: using NNSA NAP-14.1-C patterns
 scrub: scrubbing file 5368709120 bytes (~5GB)
 scrub: random  |................................................|
 scrub: random  |................................................|
