@@ -1,3 +1,9 @@
+2010-05-14 Jim Garlick <garlick@llnl.gov>
+
+	* src/pattern.c, man/scrub.1.in : Added schneier sequence [Joe].
+
+	* test/*.exp : Update for NAP string change.
+
 2009-11-09 Jim Garlick <garlick@llnl.gov>
 
 	* man/scrub.1.in : Update NAP reference.
